# minicode

./: .gitignore  README.md  pyproject.toml  test.py
MVP/: agent_loop.py  phase10_self_Improving.py  phase11_system_prompt.py  phase12_error_recovery.py  phase13_task_system.py  phase14_background_tasks.py  phase15_cron_scheduler.py  phase16_agent_teams.py  phase17_team_protocols.py  phase18_autonomous_agents.py  phase19_worktree_task_isolation.py  phase1_agent_loop.py  phase20_mcp_plugin.py  phase2_tool_use.py  phase3_todo_write.py  phase4_subagent.py  phase5_skills.py  phase6_context_compact.py  phase7_permission.py  phase8_hooks.py  phase9_memory.py  subagent.py  todo_write.py  tool_use.py
src/minicode/: __init__.py  cli.py
src/minicode/agent/: __init__.py  graph.py  memory.py  runner.py  self_improve.py  session.py  state.py  subagent.py
src/minicode/repl/: __init__.py  repl.py
src/minicode/services/: config.py  model_provider.py
src/minicode/tools/: background_tools.py  bash_tools.py  compact_tools.py  cron_tools.py  hook_tools.py  mcp_tools.py  memory_tools.py  permission_config.py  permission_tools.py  protocol_tools.py  registry.py  search_tools.py  skill_tools.py  task_tools.py  team_tools.py  todo_tools.py  worktree_tools.py
src/minicode/tui/: __init__.py  app.py  ascii_art.py  commands.py  components.py  dialogs.py  widgets.py
src/minicode/tui/themes/: __init__.py  dark.py  styles.py
src/minicode/tui/widgets/: __init__.py  header.py  input.py  message.py  sidebar.py  status.py
src/minicode/utils/: checkpoint.py  system_prompt.py
