[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "minicode"
version = "0.1.0"
description = "A Claude-style terminal coding agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.0.20",
    "langchain-anthropic>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-core>=0.1.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "textual>=0.50.0",
]

[project.scripts]
minicode = "minicode.cli:main"

[tool.setuptools.packages.find]
where = ["src"]